compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__arithmetic_op_negate.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    var r : real\n    var i : int\n    var n : nat\n    var _r := - r\n    var _i := - i\n    var _n := - n\n    "
---
"r"@(FileId(1), 9..10) [ConstVar(Var, No)]: real
"i"@(FileId(1), 26..27) [ConstVar(Var, No)]: int
"n"@(FileId(1), 42..43) [ConstVar(Var, No)]: nat
"_r"@(FileId(1), 58..60) [ConstVar(Var, No)]: real
"_i"@(FileId(1), 76..78) [ConstVar(Var, No)]: int
"_n"@(FileId(1), 94..96) [ConstVar(Var, No)]: nat
"<root>"@(dummy) [Module(No)]: <error>

